--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+}
+
 .bg{
     background: linear-gradient(rgb(0 0 0 / 66%), rgb(0 0 0 / 63%)),
                 url(https://wallpaperaccess.com/full/1512223.jpg);
