Updating dates for upcoming section

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body{
     background-repeat: no-repeat;
   }
 
-  .bg-color {
+.bg-color {
     background: linear-gradient(135deg, #40407a, #1e3799);
 }
 
@@ -31,9 +31,8 @@ body{
   transition: all 0.3s ease;
 }
 .bg-btn:hover{
-  background-color: #2a25b2; /* Matches the border color */
-   /* Inverts the text color for contrast */
-  box-shadow: 0 4px 15px rgba(112, 111, 211, 0.5); /* Adds a glowing effect */
+  background-color: #2a25b2; 
+  box-shadow: 0 4px 15px rgba(112, 111, 211, 0.5); 
 }
 .hover{
   color: red;
